--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
-    "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
@@ -25,6 +24,7 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-slick": "^0.23.13",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
